--- a/.github/workflows/github-release.yml
+++ b/.github/workflows/github-release.yml
@@ -216,22 +216,22 @@ jobs:
           asset_name: "Field-Book-v${{ env.VERSION }}.apk"
           body: ${{ steps.process-changelog.outputs.changelog_additions }}
       
-      #- name: Check date for Google Play upload
-      #  id: date_check
-      #  run: |
-      #    CURRENT_DATE=$(date +%m%d)
-      #    echo "CURRENT_DATE: $CURRENT_DATE"
-      #    if [ "$CURRENT_DATE" -ge 0415 ] && [ "$CURRENT_DATE" -le 0915 ]; then
-      #      echo "UPLOAD_TO_PLAY_STORE=false" >> $GITHUB_ENV
-      #    else
-      #      echo "UPLOAD_TO_PLAY_STORE=true" >> $GITHUB_ENV
-      #    fi
+      - name: Check date for Google Play upload
+        id: date_check
+        run: |
+          CURRENT_DATE=$(date +%m%d)
+          echo "CURRENT_DATE: $CURRENT_DATE"
+          if [ "$CURRENT_DATE" -ge 0415 ] && [ "$CURRENT_DATE" -le 0915 ]; then
+            echo "UPLOAD_TO_PLAY_STORE=false" >> $GITHUB_ENV
+          else
+            echo "UPLOAD_TO_PLAY_STORE=true" >> $GITHUB_ENV
+          fi
     
-      #- name: Release APK to Play Store
-      #  if: env.UPLOAD_TO_PLAY_STORE == 'true'
-      #  uses: r0adkll/upload-google-play@v1
-      #  with:
-      #    serviceAccountJsonPlainText: ${{ secrets.SERVICE_ACCOUNT_JSON }}
-      #    packageName: com.fieldbook.tracker
-      #    releaseFiles: app/build/outputs/apk/release/app-release-unsigned-signed.apk
-      #    track: alpha
+      - name: Release APK to Play Store
+        if: env.UPLOAD_TO_PLAY_STORE == 'true'
+        uses: r0adkll/upload-google-play@v1
+        with:
+          serviceAccountJsonPlainText: ${{ secrets.SERVICE_ACCOUNT_JSON }}
+          packageName: com.fieldbook.tracker
+          releaseFiles: app/build/outputs/apk/release/app-release-unsigned-signed.apk
+          track: alpha
