--- a/.github/workflows/process-pr-merge.yml
+++ b/.github/workflows/process-pr-merge.yml
@@ -11,11 +11,12 @@ on:
     branches:
       - main
 
+env:
+  GH_TOKEN: ${{ secrets.ACTIONS_PAT }}
+
 jobs:
   determine-pr:
     runs-on: ubuntu-latest
-    env:
-      GH_TOKEN: ${{ secrets.ACTIONS_PAT }}
     outputs:
       pr_number: ${{ steps.check-pr.outputs.pr_number }}
     steps:
@@ -46,7 +47,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: determine-pr
     outputs:
-      bump_type: ${{ steps.extract-bump.outputs.bump_type }}
+      bump_type: ${{ steps.extract-details.outputs.bump_type }}
     if: needs.determine-pr.outputs.pr_number != ''
     steps:
       - name: Checkout repository
@@ -75,7 +76,7 @@ jobs:
           echo "release_note=${release_note}" >> $GITHUB_OUTPUT
 
           # Determine change type
-          change_type=$(echo "$pr_body" | grep -oP '(?<=- \[x\] `)[A-Z]+(?=`)' | head -n 1)
+          change_type=$(echo "$pr_body" | grep -oP '(?<=- \[x\] \*\*`)[A-Z]+(?=`\*\*)' | head -n 1)
           echo "Change Type: $change_type"
           case "$change_type" in
             "ADDITION")
