--- a/app/build.gradle
+++ b/app/build.gradle
@@ -227,7 +227,10 @@ dependencies {
     implementation "androidx.exifinterface:exifinterface:1.3.6"
 
     //camerax
-    def camerax_version = "1.3.3"
+    def camerax_version = "1.4.1"
+
+    implementation "androidx.camera:camera-effects:$camerax_version"
+
     implementation "androidx.camera:camera-camera2:$camerax_version"
     implementation "androidx.camera:camera-lifecycle:$camerax_version"
     implementation "androidx.camera:camera-view:$camerax_version"
