Use smartTable library for data grid

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -71,6 +71,10 @@
 
         <!-- Data grid is available through the collect activity, once the setting is set -->
         <activity
+            android:name=".activities.OldDataGridActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize|locale"
+            android:launchMode="singleTop" /> <!-- available within the collect activity, user can search by building sql statements -->
+        <activity
             android:name=".activities.DataGridActivity"
             android:configChanges="orientation|keyboardHidden|screenSize|locale"
             android:launchMode="singleTop" /> <!-- available within the collect activity, user can search by building sql statements -->
