--- a/app/build.gradle
+++ b/app/build.gradle
@@ -243,6 +243,8 @@ dependencies {
     //AppIntro
     implementation 'com.github.AppIntro:AppIntro:6.3.1'
 
+    implementation 'com.github.huangyanbin:SmartTable:2.2.0'
+
     // Core library
     androidTestImplementation "androidx.test:core:$coreVersion"
 
