--- a/app/build.gradle
+++ b/app/build.gradle
@@ -148,7 +148,7 @@ dependencies {
 
     implementation 'com.google.zxing:core:3.4.1'
 
-    implementation('com.github.phenoapps:phenolib:0.9.51')
+    implementation('com.github.phenoapps:phenolib:v0.9.52')
 
     implementation 'com.google.android.exoplayer:exoplayer:2.19.1'
     implementation 'androidx.media3:media3-exoplayer:1.3.0'
@@ -156,7 +156,6 @@ dependencies {
     implementation 'androidx.media3:media3-ui:1.3.0'
     implementation 'androidx.media3:media3-common:1.3.0'
 
-    implementation 'com.arthenica:ffmpeg-kit-min:5.1.LTS'
     implementation 'com.squareup.okhttp3:okhttp:4.11.0'
 
     //uvc camera java native libs
