--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ buildscript {
 plugins {
     id 'com.google.dagger.hilt.android' version '2.49' apply false
     id 'org.jetbrains.kotlin.android' version '1.8.0' apply false
+    id("org.jetbrains.kotlin.plugin.serialization") version "1.9.22" apply false
 }
 
 allprojects {
