Integrate stepper UI library

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -252,6 +252,9 @@ dependencies {
     // DataGrid
     implementation "io.github.oleksandrbalan:lazytable:1.10.0"
 
+    // Stepper UI
+    implementation 'com.github.binayshaw7777:KotStep:3.0.1'
+
     // Add Compose related plugins
     implementation platform('androidx.compose:compose-bom:2025.03.00')
     // Integration with activities
