Minor ui changes
* Toolbar exits the activity
* keyboard overlapping and move to next
* stepper ui placed above the title
* renamed starting corner

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -61,7 +61,8 @@
             android:configChanges="keyboardHidden|orientation"
             android:finishOnTaskLaunch="true"
             android:launchMode="singleTop"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustResize" />
 
         <!-- Trait manager, for importing .trt files -->
         <activity
