--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,3 +1,5 @@
+import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
+
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
@@ -64,7 +66,7 @@ android {
         }
     }
 
-    compileSdkVersion 34
+    compileSdkVersion 35
 
     defaultConfig {
         applicationId "com.fieldbook.tracker"
@@ -128,7 +130,7 @@ android {
     }
 }
 
-tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
+tasks.withType(KotlinCompile).configureEach {
     kotlinOptions {
         jvmTarget = "1.8"
     }
@@ -144,39 +146,39 @@ dependencies {
     // Optional dependency used to enable USB support
     implementation 'com.github.mik3y:usb-serial-for-android:v3.8.1'
 
-    implementation("org.jetbrains.kotlinx:kotlinx-serialization-json:1.6.2")
+    implementation("org.jetbrains.kotlinx:kotlinx-serialization-json:1.7.3")
 
     //zebra dependency
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.11.0'
 
     //live data
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.8.7'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.9.2'
 
-    implementation 'androidx.appcompat:appcompat:1.7.0-alpha02'
+    implementation 'androidx.appcompat:appcompat:1.7.1'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.recyclerview:recyclerview:1.3.2'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
-    implementation 'androidx.exifinterface:exifinterface:1.3.3'
+    implementation 'androidx.recyclerview:recyclerview:1.4.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.2.1'
+    implementation 'androidx.exifinterface:exifinterface:1.4.1'
     implementation "androidx.legacy:legacy-preference-v14:1.0.0"
-    implementation "androidx.preference:preference:1.2.1"
+    implementation "androidx.preference:preference-ktx:1.2.1"
     implementation 'androidx.multidex:multidex:2.0.1'
-    implementation "androidx.core:core-ktx:1.12.0"
+    implementation "androidx.core:core-ktx:1.16.0"
     implementation 'com.android.support.constraint:constraint-layout:2.0.4'
     implementation 'com.android.volley:volley:1.2.1'
-    implementation 'com.google.android.material:material:1.10.0'
+    implementation 'com.google.android.material:material:1.12.0'
     implementation 'com.google.android.flexbox:flexbox:3.0.0'
-    implementation 'com.google.firebase:firebase-analytics:21.5.0'
-    implementation 'com.google.firebase:firebase-crashlytics:18.6.0'
+    implementation 'com.google.firebase:firebase-analytics:23.0.0'
+    implementation 'com.google.firebase:firebase-crashlytics-ktx:19.4.4'
 
     implementation 'com.google.zxing:core:3.4.1'
 
     implementation('com.github.phenoapps:phenolib:v0.9.53')
 
     implementation 'com.google.android.exoplayer:exoplayer:2.19.1'
-    implementation 'androidx.media3:media3-exoplayer:1.3.0'
-    implementation 'androidx.media3:media3-exoplayer-dash:1.3.0'
-    implementation 'androidx.media3:media3-ui:1.3.0'
-    implementation 'androidx.media3:media3-common:1.3.0'
+    implementation 'androidx.media3:media3-exoplayer:1.7.1'
+    implementation 'androidx.media3:media3-exoplayer-dash:1.7.1'
+    implementation 'androidx.media3:media3-ui:1.7.1'
+    implementation 'androidx.media3:media3-common:1.7.1'
 
     implementation 'com.squareup.okhttp3:okhttp:4.11.0'
 
@@ -190,7 +192,7 @@ dependencies {
     implementation("com.squareup.okhttp3:logging-interceptor:4.11.0")
     implementation("io.gsonfire:gson-fire:1.8.4") //required v1
 
-    implementation 'org.jsoup:jsoup:1.8.1'
+    implementation 'org.jsoup:jsoup:1.12.2'
     implementation 'net.sourceforge.jexcelapi:jxl:2.6.10'
     implementation 'pub.devrel:easypermissions:3.0.0'
     implementation('com.journeyapps:zxing-android-embedded:4.3.0') { transitive = false }
@@ -209,25 +211,25 @@ dependencies {
     implementation 'com.google.guava:listenablefuture:9999.0-empty-to-avoid-conflict-with-guava'
     //google messed up some packages, this package is temporary until the issue is fixed (Feb 2021)
 
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.1"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.9.0"
 
-    implementation "androidx.fragment:fragment-ktx:1.6.2"
+    implementation "androidx.fragment:fragment-ktx:1.8.8"
     implementation 'math.geom2d:javaGeom:0.11.1'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.7.5'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.7.5'
-    implementation "androidx.navigation:navigation-dynamic-features-fragment:2.7.5"
-    implementation "androidx.navigation:navigation-runtime-ktx:2.7.5"
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.9.2'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.9.2'
+    implementation "androidx.navigation:navigation-dynamic-features-fragment:2.9.2"
+    implementation "androidx.navigation:navigation-runtime-ktx:2.9.2"
 
-    implementation 'androidx.documentfile:documentfile:1.0.1'
+    implementation 'androidx.documentfile:documentfile:1.1.0'
 
     //hilt dependency injection
-    implementation "com.google.dagger:hilt-android:2.51.1"
+    implementation "com.google.dagger:hilt-android:2.56"
     testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
-    ksp "com.google.dagger:hilt-compiler:2.51.1"
+    ksp "com.google.dagger:hilt-compiler:2.56"
 
-    implementation 'androidx.test.ext:junit-ktx:1.1.5'
+    implementation 'androidx.test.ext:junit-ktx:1.2.1'
 
-    implementation 'com.google.mlkit:barcode-scanning:17.2.0'
+    implementation 'com.google.mlkit:barcode-scanning:17.3.0'
 
     ksp 'com.android.databinding:compiler:3.1.4'
 
@@ -237,18 +239,18 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-scalars:2.9.0"
     implementation "com.squareup.retrofit2:converter-gson:2.9.0"
 
-    testImplementation 'androidx.test:core:1.5.0'
+    testImplementation 'androidx.test:core:1.6.1'
     testImplementation 'org.robolectric:robolectric:4.3.1'
     testImplementation 'junit:junit:4.13.2'
-    testImplementation 'org.mockito:mockito-core:3.8.0'
+    testImplementation 'org.mockito:mockito-core:5.15.2'
     testImplementation 'org.powermock:powermock-module-junit4:2.0.9'
     testImplementation 'org.powermock:powermock-api-mockito2:2.0.9'
 
     //androidx exif interface
-    implementation "androidx.exifinterface:exifinterface:1.3.6"
+    implementation "androidx.exifinterface:exifinterface:1.4.1"
 
     //camerax
-    def camerax_version = "1.4.1"
+    def camerax_version = "1.4.2"
 
     implementation "androidx.camera:camera-effects:$camerax_version"
 
@@ -273,9 +275,9 @@ dependencies {
     implementation "io.github.oleksandrbalan:lazytable:1.10.0"
 
     // Add Compose related plugins
-    implementation platform('androidx.compose:compose-bom:2025.03.00')
+    implementation platform('androidx.compose:compose-bom:2025.07.00')
     // Integration with activities
-    implementation 'androidx.activity:activity-compose:1.7.2'
+    implementation 'androidx.activity:activity-compose:1.10.1'
 
     // Material Design 3
     implementation 'androidx.compose.material3:material3'
@@ -320,7 +322,7 @@ dependencies {
     // For trait data charts
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 
-    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.0.4'
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.1.5'
 }
 
 repositories {
@@ -328,6 +330,6 @@ repositories {
     maven { url "https://jitpack.io" }
 }
 
-task prepareKotlinBuildScriptModel {}
+tasks.register('prepareKotlinBuildScriptModel') {}
 
 android.defaultConfig.manifestPlaceholders = ['appAuthRedirectScheme': 'fieldbook' ]
