--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,12 +66,12 @@ android {
         }
     }
 
-    compileSdkVersion 35
+    compileSdkVersion 36
 
     defaultConfig {
         applicationId "com.fieldbook.tracker"
         minSdkVersion 21
-        targetSdkVersion 35
+        targetSdkVersion 36
         versionCode = makeVersionCode()
         versionName = makeVersionName()
         multiDexEnabled true
@@ -162,7 +162,7 @@ dependencies {
     implementation "androidx.legacy:legacy-preference-v14:1.0.0"
     implementation "androidx.preference:preference-ktx:1.2.1"
     implementation 'androidx.multidex:multidex:2.0.1'
-    implementation "androidx.core:core-ktx:1.16.0"
+    implementation "androidx.core:core-ktx:1.17.0"
     implementation 'com.android.support.constraint:constraint-layout:2.0.4'
     implementation 'com.android.volley:volley:1.2.1'
     implementation 'com.google.android.material:material:1.12.0'
@@ -278,6 +278,7 @@ dependencies {
     implementation platform('androidx.compose:compose-bom:2025.08.00')
     // Integration with activities
     implementation 'androidx.activity:activity-compose:1.10.1'
+    implementation 'androidx.activity:activity-ktx:1.10.1'
 
     // Material Design 3
     implementation 'androidx.compose.material3:material3'
